samples/_failures_safe/1761621938_fc300d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0bac4e35.c: In function ‘main’:
./samples/SAFE/__tmp_0bac4e35.c:165:5: error: expected expression at end of input
  165 |     if (scanf("%d", &start) != 1 || start < 0 || start >= n)
      |     ^~
./samples/SAFE/__tmp_0bac4e35.c:165:5: error: expected declaration or statement at end of input
